Add Claude Code Web hooks, permissions, and documentation
- .claude/settings.json: SessionStart hook injects git context and Java
  version at session start; PostToolUse hook auto-runs spotless:apply
  after Java file edits to prevent compile-phase formatting failures;
  pre-approves ./mvnw * and git * commands
- CLAUDE.md: document the hooks and pre-approved permissions; update
  formatting note to reflect auto-apply via hook

https://claude.ai/code/session_01PqmMk82GbY5PUY1L24u6Xm