@@ -33,8 +33,34 @@ This file provides guidance to Claude Code (claude.ai/code) when working with co
 
 **`Result<T, E>` type:** A sealed interface with `Success`/`Failure` variants providing railway-oriented programming. Use `Result.of(supplier)` to wrap throwing operations. Supports `map`, `flatMap`, `fold`, `recover`, `peek`, and `orElseThrow`.
 
-**Formatting:** Spotless with Google Java Format (AOSP style) runs automatically at compile phase — run `./mvnw spotless:apply` before committing if the build fails on formatting.
+**Formatting:** Spotless with Google Java Format (AOSP style) runs automatically at compile phase. The PostToolUse hook (see below) auto-runs `spotless:apply` after every Java file edit — do not run it manually.
 
 **Build cache:** Maven Build Cache Extension is active; incremental builds skip unchanged modules automatically.
 
 **Maven flags (always applied via `.mvn/maven.config`):** `-B` (batch mode), `--fail-at-end`, `--no-transfer-progress`.
+
+## Claude Code Configuration (`.claude/`)
+
+`.claude/settings.json` is checked in and applies to all contributors using Claude Code.
+
+### Hooks
+
+**SessionStart** — runs when a session begins:
+- Displays `git status`, current branch, and last 5 commits so Claude has immediate project context
+- Verifies the Java version (must be 25 for `--enable-preview`)
+
+**PostToolUse (Edit/Write on `.java` files)** — runs automatically after every Java file edit:
+- Auto-runs `./mvnw spotless:apply -q` after each edit
+- Since `spotless:check` runs at compile phase, this prevents build failures without any manual step
+
+### Permissions
+
+`./mvnw *` and `git *` are pre-approved; Claude Code will not prompt for confirmation on these commands.
+
+### Optional: Pre-warm the build cache
+
+For long sessions, warm the Maven Build Cache before starting:
+
+```bash
+./mvnw compile -q -T1C
+```
